deploy/k3s/base/routes/minipay-web-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: {name: merchant-web, namespace: minipay}
spec:
  parentRefs: [{name: minipay-gateway, sectionName: http}]
  hostnames: [merchant.minipay.localhost]
  rules:
    - matches:
        - {path: {type: PathPrefix, value: /api}}
        - {path: {type: PathPrefix, value: /oauth2}}
        - {path: {type: PathPrefix, value: /login/oauth2}}
        - {path: {type: PathPrefix, value: /merchant/oauth2}}
        - {path: {type: PathPrefix, value: /logout}}
        - {path: {type: PathPrefix, value: /switch-login}}
      backendRefs: [{name: management-bff, port: 8080}]
    - matches: [{path: {type: PathPrefix, value: /}}]
      backendRefs: [{name: merchant-web, port: 80}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: {name: ops-web, namespace: minipay}
spec:
  parentRefs: [{name: minipay-gateway, sectionName: http}]
  hostnames: [ops.minipay.localhost]
  rules:
    - matches: [{path: {type: PathPrefix, value: /identity}}]
      filters:
        - type: URLRewrite
          urlRewrite: {path: {type: ReplacePrefixMatch, replacePrefixMatch: /}}
      backendRefs: [{name: identity-service, port: 8080}]
    - matches:
        - {path: {type: PathPrefix, value: /api}}
        - {path: {type: PathPrefix, value: /oauth2}}
        - {path: {type: PathPrefix, value: /login/oauth2}}
        - {path: {type: PathPrefix, value: /logout}}
        - {path: {type: PathPrefix, value: /switch-login}}
      backendRefs: [{name: management-bff, port: 8080}]
    - matches: [{path: {type: PathPrefix, value: /}}]
      backendRefs: [{name: ops-web, port: 80}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: {name: admin-web, namespace: minipay}
spec:
  parentRefs: [{name: minipay-gateway, sectionName: http}]
  hostnames: [admin.minipay.localhost]
  rules:
    - matches: [{path: {type: PathPrefix, value: /identity}}]
      filters:
        - type: URLRewrite
          urlRewrite: {path: {type: ReplacePrefixMatch, replacePrefixMatch: /}}
      backendRefs: [{name: identity-service, port: 8080}]
    - matches:
        - {path: {type: PathPrefix, value: /api}}
        - {path: {type: PathPrefix, value: /oauth2}}
        - {path: {type: PathPrefix, value: /login/oauth2}}
        - {path: {type: PathPrefix, value: /logout}}
        - {path: {type: PathPrefix, value: /switch-login}}
      backendRefs: [{name: admin-bff, port: 8080}]
    - matches: [{path: {type: PathPrefix, value: /}}]
      backendRefs: [{name: admin-web, port: 80}]
